--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-editor",
-  "version": "0.1.1",
+  "version": "0.1.1-hotfix-1",
   "private": true,
   "homepage": "https://snamoah.github.io/react-pdf-editor",
   "dependencies": {
@@ -64,7 +64,6 @@
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
-    "eslint": "^7.7.0",
     "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
