--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-editor",
-  "version": "0.1.1-hotfix-1",
+  "version": "0.1.1.1",
   "private": true,
   "homepage": "https://snamoah.github.io/react-pdf-editor",
   "dependencies": {
