ci: remove quotes around secrets

--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -10,8 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Github Configuration
         run: |
-          git config --global user.email "${{ secrets.EMAIL }}"
-          git config --global user.name "${{ secrets.NAME }}"
+          git config --global user.email ${{ secrets.EMAIL }}
+          git config --global user.name ${{ secrets.NAME }}
+
       - name: Install Node
         uses: actions/setup-node@v1
         with:
