test(App): add tests for MenuBar (#15)
* build(workflows): add workflow for testing on every pull request

* test(Empty): test loading and button click

* test(App): add menuBar tests

* build(): upgrade node version in workflow to 12

--- a/.github/workflows/build-test-workflow.yml
+++ b/.github/workflows/build-test-workflow.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 12.x
       - name: Install dependencies
         run: yarn
+      - name: Run Lint
+        run: yarn lint
       - name: Run Tests
-        run: |
-          yarn lint
-          yarn test
+        run: yarn test
